flux/apps/pinchflat/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pinchflat

spec:
  selector:
    matchLabels:
      app: pinchflat
  
  template:
    metadata:
      labels:
        app: pinchflat
    
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: downloads
          nfs:
            server: mnemosyne.internal.bootleg.technology
            path: /volume1/Media

      containers:
        - name: pinchflat
          image: ghcr.io/kieraneglin/pinchflat:latest@sha256:01b4f98aabaf3f5fe394213f7a32578c9e84e42080f52e2f8334021a4473b202

          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
              subPath: YouTube

          ports:
            - containerPort: 8945
              protocol: TCP
              name: http
