flux/apps/pinchflat/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pinchflat

spec:
  selector:
    app: pinchflat

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
